fixed error regarding x overflow of nav bar

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,31 +1,3 @@
-.pulse-button {
-
-  position: relative;
-  width: 50px;
-  height: 50px;
-  border: none;
-  box-shadow: 0 0 0 0 #ffcc00;
-  border-radius: 100%;
-  background-size:cover;
-  background-repeat: no-repeat;
-  cursor: pointer;
-  -webkit-animation: pulse 2s infinite cubic-bezier(0.33, 0, 0, .5);
-  -moz-animation: pulse 2s infinite cubic-bezier(0.33, 0, 0, .5);
-  -ms-animation: pulse 2s infinite cubic-bezier(0.33, 0, 0, .5);
-  animation: pulse 2s infinite cubic-bezier(0.33, 0, 0, .5);
-}
-.pulse-button:hover 
-{
-  -webkit-animation: none;-moz-animation: none;-ms-animation: none;animation: none;
-}
-
-@-webkit-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-@-moz-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-@-ms-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-@keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-
-
-
 .navbar-default{
 	background: transparent;
 	border-top: 5px solid #ffcc00;
@@ -58,7 +30,7 @@
 .navbar-spacer {
 	background-color: #000000;
 	padding-left: 1vw;
-	padding-right: 2vw;
+	padding-right: 1.5vw;
 	border:none;
 	background:none;	
 
@@ -76,6 +48,7 @@
 }
 
 body {
+	overflow-x:hidden;
     width: 100%;
     height: 100%;
 }
